--- a/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
@@ -1,5 +1,6 @@
 <h2>Display Raw Material Order</h2>
-<form action="DisplayAllRawMaterialOrdersServlet" method="post">
+
+ <form action="./DisplayAllRawMaterialOrders" method ="post">
         <div class="container " class="form-check" class="was-validated">
 
                 <hr>
@@ -60,7 +61,7 @@
                                                 <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
                                                   <thead>
                                                     <tr>
-                                                <th><div class="col-lg-0.5">OrderId</div></th>
+                                                
                                                 <th><div class="col-lg-1">Name</div></th>
                                                 <!-- <th><div class="col-lg-0.25">RawMaterial<br>Id</div></th> -->
                                                 <th><div class="col-lg-0.5">SupplierId</div></th>
@@ -79,8 +80,8 @@
                                                 <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
                                                                 <tbody>
                                                                   <tr>
-                                                        <td><div class="col-lg-1">{{rmo.orderId}}</div></td>
-                                                        <td align="left"><div class="col-lg-0.5">{{rmo.name}}</div></td>
+                                                        
+                                                        <td ><div class="col-lg-0.5">{{rmo.name}}</div></td>
                                                         <!-- <td><div class="col-lg-1">{{rmo.rmId}}</div></td> -->
                                                         <td><div class="col-lg-0.5">{{rmo.supplierId}}</div></td>
                                                         <td><div class="col-lg-1">{{rmo.quantityValue}}</div></td>
