--- a/src/app/rawmaterials/place-rawmaterial-orders/place-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/place-rawmaterial-orders/place-rawmaterial-orders.component.html
@@ -43,7 +43,7 @@
                     </label>
                     <br>
                     <input required pattern='[0-9]+' type="text" #quantity='ngModel' class='form-control' id="quantity" [(ngModel)]='quantityVar'
-                        name='quantity' (change)="log1(quantity)">
+                        name='quantity' (change)="log(quantity)">
                     <div class="alert alert-danger" *ngIf="quantity.touched && !quantity.valid"> This field is required
                         <div *ngIf="quantity.errors.pattern"> Enter value in decimal only </div>
                     </div>
@@ -66,7 +66,7 @@
                     </label>
                     <br>
                     <input required pattern='[0-9]+' type="text" #pricePerUnit='ngModel' class='form-control' id="pricePerUnit" [(ngModel)]='pricePerUnitVar'
-                        name='pricePerUnit' (change)="log2(pricePerUnit)">
+                        name='pricePerUnit' (change)="log(pricePerUnit)">
                     <div class="alert alert-danger" *ngIf="pricePerUnit.touched && !pricePerUnit.valid"> This field is required
                         <div *ngIf="pricePerUnit.errors.pattern"> Enter value in decimal only </div>
                     </div>
