--- a/src/app/products/display-product-orders/display-product-orders.component.html
+++ b/src/app/products/display-product-orders/display-product-orders.component.html
@@ -1,3 +1,4 @@
+<!-- 
 <h2>Display Product Order</h2>
 <div class="container wrapper" class="form-check" class="was-validated">
      <hr>
@@ -98,4 +99,135 @@
     </div>
 
 </div>
+ -->
+ 
+<h2>Display Product Order</h2>
+<div class="container">
 
+        <div class="row">
+                <div class="col col-sm-4">
+
+                        <label for="DeliveryStatus">
+                                <p><b>Choose delivery status</b> </p>
+                        </label>
+                        <select class="form-control" name="DeliveryStatus" [(ngModel)]="DeliveryStatusVar" required>
+                                <option value="ALL">ALL</option>
+                                <option value="Received">Received</option>
+                                <option value="Dispatched">Dispatched</option>
+                                <option value="Cancelled">Cancelled</option>
+                                <option value="Pending">Pending</option>
+                        </select> <br>
+                        <label for="DistributorID">
+                                <p><b>Choose Distributor</b> </p>
+                        </label>
+                        <select class="form-control" name="DistributorID" [(ngModel)]="DistributorIDVar" required>
+                                <option value="ALL">ALL</option>
+                                <option value="d001">d001</option>
+                                <option value="d002">d002</option>
+                                <option value="d003">d003</option>
+                                <option value="d004">d004</option>
+                                <option value="d005">d005</option>
+                        </select>
+                </div>
+                <div class="col col-sm-2" style="align-content: center;"><br><br><br><input type="checkbox"
+                                (click)="changestatus(); SetMaxDate()"> Show Calendar<br><br><input class="btn btn-dark" type="submit" value="submit"
+                                (click)="getProduct()"></div>
+
+                <div *ngIf="!(showdate); then thenBlock else elseBlock"></div>
+                <ng-template #thenBlock>
+                        <div class="col-lg-4"> Enter start date: <br> <input [max]="todayFormat" type="date"
+                                        name="date1" [(ngModel)]="date1Var" id="date1"><br><br> Enter end date : <br>
+                                <input [max]="todayFormat" type="date" name="date2" [(ngModel)]="date2Var"
+                                        id="date2"><br><br> </div>
+
+                </ng-template>
+                <ng-template #elseBlock>
+                </ng-template>
+
+                <div *ngIf="!isDataFetched">
+                        <strong>{{ message }}</strong>
+                </div>
+
+                <div *ngIf="isDataFetched">
+
+                        <div class="table-responsive{-xsm-sm|-md|-lg|-xl}">
+
+                                <table class="table table-striped table-bordered table-fixed table-hover table-condensed"
+                                        style="border:0px; " id="myTable3">
+                                        <thead>
+                                                <tr>
+
+                                                        <th>
+                                                                <div class="col-lg-1">Name</div>
+                                                        </th>
+                                                        <th>
+                                                                <div class="col-lg-0.5">DistributorId</div>
+                                                        </th>
+                                                        <th>
+                                                                <div class="col-lg-0.5">Quantity</div>
+                                                        </th>
+                                                        <th>
+                                                                <div class="col-lg-0.5">QuantityUnit</div>
+                                                        </th>
+                                                        <th>
+                                                                <div class="col-lg-1">Order<br>Date</div>
+                                                        </th>
+                                                        <th>
+                                                                <div class="col-lg-0.5">Delivery<br>Date</div>
+                                                        </th>
+                                                        <th>
+                                                                <div class="col-lg-0.5">Unit<br>Price</div>
+                                                        </th>
+                                                        <th>
+                                                                <div class="col-lg-0.5">TotalPrice</div>
+                                                        </th>
+                                                        <th>
+                                                                <div class="col-lg-0.25">DeliveryStatus</div>
+                                                        </th>
+
+                                                </tr>
+                                        </thead>
+                                        <tbody>
+                                                <tr *ngFor="let po of pos">
+
+                                                        <td>
+                                                                <div class="col-lg-0.5">{{po.name}}</div>
+                                                        </td>
+                                                        <td>
+                                                                <div class="col-lg-0.5">{{po.distributorId}}</div>
+                                                        </td>
+                                                        <td>
+                                                                <div class="col-lg-1">{{po.quantityValue}}
+                                                                </div>
+                                                        </td>
+                                                        <td align="left">
+                                                                <div class="col-lg-1">{{po.quantityUnit}}</div>
+                                                        </td>
+                                                        <td align="left">
+                                                                <div class="col-lg-0.5">
+                                                                        {{po.dateOfOrder | date :'yyyy-MM-dd' }}
+                                                                </div>
+                                                        </td>
+                                                        <td>
+                                                                <div class="col-lg-0.5">
+                                                                        {{po.dateOfDelivery | date :'yyyy-MM-dd'}}
+                                                                </div>
+                                                        </td>
+                                                        <td>
+                                                                <div class="col-lg-1">{{po.pricePerUnit}}</div>
+                                                        </td>
+                                                        <td>
+                                                                <div class="col-lg-1">{{po.totalPrice}}</div>
+                                                        </td>
+                                                        <td>
+                                                                <div class="col-lg-1.25">{{po.deliveryStatus}}
+                                                                </div>
+                                                        </td>
+
+                                                </tr>
+                                        </tbody>
+                                </table>
+                        </div>
+
+                </div>
+        </div>
