--- a/src/app/rawmaterials/display-supplier-details/display-supplier-details.component.html
+++ b/src/app/rawmaterials/display-supplier-details/display-supplier-details.component.html
@@ -49,15 +49,15 @@
                         </tr>
                 </thead>
                 </table>
-                <div  class="table-responsive" class ="table-responsive{-sm|-md|-lg|-xl}">
+                <div  *ngFor="let s of dsups" class="table-responsive" class ="table-responsive{-sm|-md|-lg|-xl}">
                                 <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
                                                 <tbody>
                                                   <tr>
-                                        <td><div class="col-lg-1">{{dsups.supplierId}}</div></td>
-                                        <td><div class="col-lg-0.5">{{dsups.name}}</div></td>
-                                        <td><div class="col-lg-1">{{dsups.address}}</div></td>
-                                        <td><div class="col-lg-0.5">{{dsups.emailId}}</div></td>
-                                        <td><div class="col-lg-1">{{dsups.phoneNo}}</div></td>
+                                        <td><div class="col-lg-1">{{s.supplierId}}</div></td>
+                                        <td><div class="col-lg-0.5">{{s.name}}</div></td>
+                                        <td><div class="col-lg-1">{{s.address}}</div></td>
+                                        <td><div class="col-lg-0.5">{{s.emailId}}</div></td>
+                                        <td><div class="col-lg-1">{{s.phoneNo}}</div></td>
                                                                          
                                 </tr>
 
