--- a/src/app/rawmaterials/display-supplier-details/display-supplier-details.component.html
+++ b/src/app/rawmaterials/display-supplier-details/display-supplier-details.component.html
@@ -22,13 +22,13 @@
         <br>
         <br>
         <br>
-        <div style="width: 500px;" align="left">
+        <div style="width: 500px;" >
             <input type="submit" class="btn btn-dark" value="submit" (click)="getMessage()"><br>
         </div>
         <br>
 
 
-<!-- <div *ngIf ="!isDataFetched"> -->
+
     <div class="alert alert-info" *ngIf ="!isDataFetched">
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <strong>{{ message }}</strong>
       </div>
