nafees changed from left to center

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -22,7 +22,7 @@
 							<input type="text" name="username" class="form-control input_user" placeholder="username" [(ngModel)]="usernameVar" id="username" required />
 						</div>
 						
-						<div class="d-flex justify-content-left">
+						<div class="d-flex justify-content-center">
 							<label>Enter Password :</label>
 						</div>
 						<div class="input-group mb-2">
