--- a/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
@@ -59,7 +59,10 @@
         </div>
 
         <div *ngIf="isDataFetched">
-
+                
+                <div>
+                        <input class="form-control" type="text" name="search" [(ngModel)]="search">      
+                </div>
                 <div class="table-responsive{-xsm-sm|-md|-lg|-xl}">
 
                         <table class="table table-striped table-bordered table-fixed table-hover table-condensed"
@@ -98,7 +101,7 @@
                                         </tr>
                                 </thead>
                                 <tbody>
-                                        <tr *ngFor="let rmo of rmos">
+                                        <tr *ngFor="let rmo of rmos | filter:search ;">
 
                                                 <td>
                                                         <div class="col-lg-0.5">{{rmo.name}}</div>
