--- a/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
@@ -57,12 +57,16 @@
         <div *ngIf="!isDataFetched">
                 <strong>{{ message }}</strong>
         </div>
-
+<br>
         <div *ngIf="isDataFetched">
                 
                 <div>
+                                <label for="DeliveryStatus">
+                                                <p><b>Search</b> </p>
+                                        </label>
                         <input class="form-control" type="text" name="search" [(ngModel)]="search">      
                 </div>
+                <br>
                 <div class="table-responsive{-xsm-sm|-md|-lg|-xl}">
 
                         <table class="table table-striped table-bordered table-fixed table-hover table-condensed"
@@ -101,7 +105,7 @@
                                         </tr>
                                 </thead>
                                 <tbody>
-                                        <tr *ngFor="let rmo of rmos | filter:search ;">
+                                        <tr *ngFor="let rmo of rmos | filter:search | paginate: { itemsPerPage: 10, currentPage: p };">
 
                                                 <td>
                                                         <div class="col-lg-0.5">{{rmo.name}}</div>
@@ -139,7 +143,9 @@
 
                                         </tr>
                                 </tbody>
+                                <pagination-controls (pageChange)="p = $event"></pagination-controls>
                         </table>
+                      
                 </div>
 
         </div>
