--- a/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
@@ -100,7 +100,7 @@
                                                                                                 <option (click)="sort1('name')"
                                                                                                         class="dropdown-item"
                                                                                                         value="Sort Z to A">
-                                                                                                        Sort Z to A
+                                                                                                         Sort Z to A
                                                                                                 </option>
 
 
@@ -123,7 +123,7 @@
                                                                                                 data-toggle="dropdown"
                                                                                                 aria-haspopup="true"
                                                                                                 aria-expanded="false">
-                                                                                                SupplierId
+                                                                                                Supplier Id
                                                                                         </button>
                                                                                         <div class="dropdown-menu">
 
@@ -175,7 +175,7 @@
                                                                                                 data-toggle="dropdown"
                                                                                                 aria-haspopup="true"
                                                                                                 aria-expanded="false">
-                                                                                                OrderDate
+                                                                                                Order Date
                                                                                         </button>
                                                                                         <div class="dropdown-menu">
 
@@ -212,7 +212,7 @@
                                                                                                 data-toggle="dropdown"
                                                                                                 aria-haspopup="true"
                                                                                                 aria-expanded="false">
-                                                                                                DeliveryDate
+                                                                                                Delivery Date
                                                                                         </button>
                                                                                         <div class="dropdown-menu">
 
@@ -241,7 +241,7 @@
                                                         <div class="btn-group">
                                                                 <button class="btn btn-secondary  btn-secondary-spacing font"
                                                                         type="button">
-                                                                        Unit<br>Price
+                                                                       Unit Price
                                                                 </button>
 
 
@@ -257,7 +257,7 @@
                                                                                                 data-toggle="dropdown"
                                                                                                 aria-haspopup="true"
                                                                                                 aria-expanded="false">
-                                                                                                TotalPrice
+                                                                                                Total Price
                                                                                         </button>
                                                                                         <div class="dropdown-menu">
 
@@ -289,7 +289,7 @@
                                                         <div class="btn-group">
                                                                 <button class="btn btn-secondary  btn-secondary-spacing font"
                                                                         type="button">
-                                                                        DeliveryStatus
+                                                                        Delivery Status
                                                                 </button>
 
 
