--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -32,7 +32,7 @@
 						</div>
 					</div>
 					
-						<button type="submit" class="btn btn-dark" (click)="getMessage()">Login</button>
+						<button name="button" type="submit" class="btn btn-dark" (click)="getMessage()">Login</button>
 					
 					</form> 
 				</div>
