--- a/src/app/products/display-distributor-details/display-distributor-details.component.html
+++ b/src/app/products/display-distributor-details/display-distributor-details.component.html
@@ -48,12 +48,10 @@
                                 <th><div class="col-lg-0.5">Phone<br>Number</div></th>
                                                                 
                         </tr>
-                </thead>
-                </table>
-                <div  *ngFor="let d of ddiss" class="table-responsive" class ="table-responsive{-sm|-md|-lg|-xl}">
-                                <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
-                                                <tbody>
-                                                  <tr>
+                
+    
+                           <tbody>
+                               <tr *ngFor="let d of ddiss" class="table-responsive" class ="table-responsive{-sm|-md|-lg|-xl}">
                                         <td><div class="col-lg-1">{{d.distributorId}}</div></td>
                                         <td><div class="col-lg-0.5">{{d.name}}</div></td>
                                         <td><div class="col-lg-1">{{d.address}}</div></td>
@@ -70,7 +68,7 @@
 
 
 
-        </div>
+      
 
 </div>
 
