--- a/src/app/rawmaterials/display-supplier-details/display-supplier-details.component.html
+++ b/src/app/rawmaterials/display-supplier-details/display-supplier-details.component.html
@@ -47,12 +47,11 @@
                                 <th><div class="col-lg-0.5">Phone<br>Number</div></th>
                                                                 
                         </tr>
-                </thead>
-                </table>
-                <div  *ngFor="let s of dsups" class="table-responsive" class ="table-responsive{-sm|-md|-lg|-xl}">
-                                <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
-                                                <tbody>
-                                                  <tr>
+                
+        
+        
+                 <tbody>
+                                                <tr *ngFor="let s of dsups" class="table-responsive" class ="table-responsive{-sm|-md|-lg|-xl}">
                                         <td><div class="col-lg-1">{{s.supplierId}}</div></td>
                                         <td><div class="col-lg-0.5">{{s.name}}</div></td>
                                         <td><div class="col-lg-1">{{s.address}}</div></td>
@@ -65,10 +64,6 @@
                 </table>
                 </div>
 
-
-
-
-        </div>
 
 </div>
 
